# arkanoid

./: .gitignore  BACKLOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  arkanoid.desktop  arkanoid.h  audio.cpp  audio.h  bricktron.desktop  bricktron.h  flathub-submit.sh  game_objects.cpp  game_objects.h  intro.cpp  intro.h  io.github.arturkos.Arkanoid.metainfo.xml  io.github.arturkos.Arkanoid.yaml  io.github.arturkos.Bricktron.metainfo.xml  io.github.arturkos.Bricktron.yaml  main.cpp  makefile  paths.cpp  paths.h  record-demo.sh  release.sh  scores.cpp  scores.h  screen.cpp  screen.h  settings.cpp  settings.h
docs/: AGENT_WORKFLOW.md
scripts/: agent_workflow.py
scripts/workflow_roles/: architect.md  committer.md  critic.md  programmer.md  reviewer.md  tester.md
tools/: gen_sounds.py
